@@ -1,9 +1,9 @@
 package com.dmdev.service.contoller;
 
 import com.dmdev.service.dto.RequestCreateEditDto;
-import com.dmdev.service.dto.RequestReadDto;
 import com.dmdev.service.entity.RequestStatus;
 import com.dmdev.service.entity.Status;
+import com.dmdev.service.exception.ServiceException;
 import com.dmdev.service.service.CarService;
 import com.dmdev.service.service.RequestService;
 import com.dmdev.service.service.TariffService;
@@ -21,6 +21,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import static java.util.stream.Collectors.toList;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Controller
@@ -60,7 +61,7 @@ public class RequestController {
         model.addAttribute("statuses", RequestStatus.values());
         model.addAttribute("users", userService.findAll());
         model.addAttribute("cars", carService.findAll().stream()
-                .filter(car -> car.getStatus().equals(Status.FREE)).toList());
+                .filter(car -> Status.FREE.equals(car.getStatus())).collect(toList()));
         model.addAttribute("tariffs", tariffService.findAll());
         return "request/create";
     }
@@ -69,13 +70,17 @@ public class RequestController {
     public String create(@Validated RequestCreateEditDto createEditDto,
                          BindingResult bindingResult,
                          RedirectAttributes redirectAttributes) {
-        RequestReadDto requestReadDto = requestService.create(createEditDto);
-        if (bindingResult.hasErrors() || requestReadDto == null) {
-            redirectAttributes.addFlashAttribute("request", createEditDto);
-            redirectAttributes.addFlashAttribute("errors", bindingResult.getAllErrors());
+        try {
+            if (bindingResult.hasErrors()) {
+                redirectAttributes.addFlashAttribute("request", createEditDto);
+                redirectAttributes.addFlashAttribute("errors", bindingResult.getAllErrors());
+                return "redirect:/requests/create";
+            }
+            return "redirect:/requests/" + requestService.create(createEditDto).getId();
+        } catch (ServiceException ex) {
+            redirectAttributes.addFlashAttribute("exception", ex);
             return "redirect:/requests/create";
         }
-        return "redirect:/requests/" + requestReadDto.getId();
     }
 
     @PostMapping(value = "/{id}/update", params = "action=update")
